--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ num-traits = "0.2"
 num_cpus = "1.13.1"
 once_cell = "1.12.0"
 parking_lot = { version = "0.12.0", features = ["hardware-lock-elision"] }
+parking_lot_core = "0.9"
 rand = "0.8"
 rlimit = "0.9.1"
 serde = { version = "1.0", features = ["derive"] }
