--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ futures-util = "0.3"
 hex = "0.4"
 humantime = "2.1.0"
 libc = "0.2"
+memmap = "0.7.0"
 num-traits = "0.2"
 num_cpus = "1.13.1"
 once_cell = "1.12.0"
