--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,7 @@ broxus-util = { version = "0.2", default-features = false, features = [
     "config",
     "alloc",
     "public-ip",
+    "signal",
 ] }
 
 [features]
