--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,8 @@ archive-uploader = { path = "archive-uploader", optional = true }
 global-config = { path = "global-config" }
 bytesize = { version = "1.2.0", features = ["serde"] }
 quick_cache = "0.4.0"
+base64 = "0.21.4"
+reqwest = { version = "0.11.22", features = ["json"] }
 
 [dev-dependencies]
 argh = "0.1"
