Add `ton` feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,6 +80,7 @@ count-cells = ["countme/enable", "ton_types/profile"]
 archive-uploader = ["dep:archive-uploader"]
 alloc-profiling = ["broxus-util/alloc-profiling"]
 venom = ["ton_block/venom"]
+ton = ["ton_block/ton"]
 
 [profile.release]
 debug = true
