--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ archive-uploader = { path = "archive-uploader", optional = true }
 global-config = { path = "global-config" }
 bytesize = { version = "1.2.0", features = ["serde"] }
 quick_cache = "0.4.0"
+metrics = "0.22.0"
 
 [dev-dependencies]
 argh = "0.1"
