--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ global-config = { path = "global-config" }
 bytesize = { version = "1.2.0", features = ["serde"] }
 quick_cache = "0.4.0"
 metrics = "0.22.0"
+base64 = "0.13.1"
 
 [dev-dependencies]
 argh = "0.1"
