--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,7 @@ broxus-util = { version = "0.2", default-features = false, features = [
     "public-ip",
     "signal"
 ] }
+tracing-appender = "0.2"
 
 [features]
 default = []
