--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,7 @@ bytesize = { version = "1.2.0", features = ["serde"] }
 quick_cache = "0.4.0"
 metrics = "0.22.0"
 base64 = "0.13.1"
+tempfile = "3.10.1"
 
 [dev-dependencies]
 argh = "0.1"
