Fix blocks gc removing blocks in use

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,12 +59,6 @@ base64 = "0.13.1"
 
 [dev-dependencies]
 argh = "0.1"
-cargo-husky = { version = "1.5.0", features = [
-    "precommit-hook",
-    "run-cargo-test",
-    "run-cargo-clippy",
-    "run-cargo-fmt",
-] }
 config = { version = "0.13", default-features = false, features = ["yaml"] }
 serde_yaml = "0.9"
 tokio = { version = "1", features = ["full"] }
@@ -73,7 +67,7 @@ broxus-util = { version = "0.2", default-features = false, features = [
     "config",
     "alloc",
     "public-ip",
-    "signal"
+    "signal",
 ] }
 
 [features]
